# Open_Green_Tech

./: .dockerignore  .gitignore  PITCH-ORAL-2MIN.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  rapport-de-app.md
apps/Green_house--main/: CODE.ino  README.md  gabes_year_dataset.csv  hivemq.env.example
apps/Green_house--main/ei-random-test/: CMakeLists.txt  file.json  gabes_preview_2rows.csv  main.cpp  msvc_compat.h  publish_file_json_hivemq.py  run_csv_to_mqtt_flow.py
apps/Green_house--main/mohamed_said-project-1-cpp-mcu-v12-impulse-#5/: README.txt
apps/Green_house--main/mohamed_said-project-1-cpp-mcu-v12-impulse-#5/model-parameters/: anomaly_metadata.h  model_metadata.h  model_variables.h
apps/backend/: .env  .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  package.json  prisma.config.ts  tsconfig.json
apps/backend/prisma/: schema.prisma  seed.ts
apps/backend/scripts/: demo-simulator.ts
apps/backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/backend/src/admin/: admin.controller.ts  admin.service.ts
apps/backend/src/ai/: ai.service.ts
apps/backend/src/alerts/: alerts.controller.ts  alerts.service.ts
apps/backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
apps/backend/src/chat/: chat.controller.ts  chat.service.ts
apps/backend/src/demo/: demo.controller.ts  demo.module.ts  demo.service.ts
apps/backend/src/devices/: devices.controller.ts  devices.service.ts
apps/backend/src/mqtt/: mqtt.controller.ts  mqtt.module.ts  mqtt.service.ts
apps/backend/src/prisma/: prisma.service.ts
apps/backend/test/: app.e2e-spec.ts
apps/mobile/: .env.example  .flutter-plugins-dependencies  .gitignore  pubspec.yaml
apps/mobile/.dart_tool/: package_config.json  package_graph.json
apps/mobile/android/: local.properties
apps/mobile/ios/Runner/: Info.plist  (+1 more)
apps/mobile/lib/: main.dart
apps/mobile/test/: widget_test.dart
apps/web/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
(+161 files in other folders)
